src/app/pages/home/home.page.scss
$bhue: 80;
$bsat: 60;
$blig: 55;
$light: hsl($bhue, calc(#{$bsat} * 1%), calc(#{$blig} * 1%));
$dark: hsl($bhue, calc(#{$bsat} * 1%), calc(#{$blig} * 1% - 15%));
$darkest: hsl($bhue, calc(#{$bsat} * 1%), calc(#{$blig} * 1% - 35%));

#container {
  text-align: center;
  position: absolute;
  left: 0;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}

#container strong {
  font-size: 20px;
  line-height: 26px;
}

#container p {
  font-size: 16px;
  line-height: 22px;

  color: #8c8c8c;

  margin: 0;
}

#container a {
  text-decoration: none;
}

// // Using SCSS variables to store breakpoints
$breakpoint-tablet: 767px;

.landing-welcome-label {
  font-size: 30px;
  text-shadow: 5px 5px 5px #2d2d2d;
  color: white;
  padding: 20px;
  margin: 0;
  font-weight: 500;
}

@media (max-width: $breakpoint-tablet) {
  .landing-welcome-label {
    font-size: 22px;
  }
}

// .landing-welcome-label {
//   // text-shadow: 1px 1px 5px green;
//   font-size: 30px;
//   // color: white;
//   color: black;
//   font-weight: bold;
//   padding: 20px;
//   margin: 0;
// }

.landing-welcome-img {
  background: url("../../../assets/banners/home_banner.jpg");
  background-repeat: no-repeat;
  // background-attachment: fixed;
  background-size: cover;
  height: 310px;
  text-align: center;
  padding-top: 50px;
  @media only screen and (min-width: 200px) {
    background-position: 53%;
  }
  @media only screen and (min-width: 768px) {
    background-position: 56%;
  }
  @media only screen and (min-width: 1024px) {
    background-position: 68%;
  }
}

.landing-card {
  background: yellowgreen;
  color: white;
}

.wiof-primary-button {
  width: 150px;
  border-radius: 25px;
  height: 30px;
  background: white;
  color: black;
}

.wiof-footer {
  background-color: darkslategray;
  color: white;
}

.social-media-block {
  background: white;
  width: fit-content;
  border-radius: 5px;
  padding: 0px 10px;
  margin-top: 10px;
}

.wiof-landing-card {
  background: yellowgreen;
  color: white;
}

.ia-container {
  position: absolute;
  z-index: 102;
  width: 100%;
  height: 100%;
  background: gold;
  margin: auto;
  text-align: center;

  .ia-logo-image-container {
    text-align: center;

    .ia-logo-image {
      height: 150px;
      box-shadow: 1px 1px 5px black;
      border-radius: 0px 0px 25px 25px;
      background-color: white;
    }

    .ia-welcome-text {
      margin-top: 40px;
      p {
        font-size: 40px;
        font-weight: bold;
        margin: 0;
        margin-bottom: 10px;

        strong {
          color: #aa000f;
          text-shadow: 1px 1px 5px white;
          font-size: 50px;

          &.site-name {
            text-shadow: 1px 1px 5px black;
            font-size: 40px;
            color: white;
          }
        }
      }
    }
  }

  .ribbon {
    height: 70px;
    width: 100%;
    margin-top: 90px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
    border-bottom: 1px solid $dark;
    background: radial-gradient(red, brown);
  }

  .badge-space {
    width: 100%;
    position: absolute;
    top: 37%;
    display: flex;
    justify-content: center;
  }

  .badge {
    $size: 200px;
    $light: #fcfaed;
    $dark: #d5d4ca;
    align-self: center;
    width: $size;
    height: $size;
    border-radius: $size;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    background-image: url("../../../assets/icon/favicon.png");
    background-size: contain;
    box-shadow: 5px 5px 15px rgba(50, 50, 50, 0.2), inset 10px 0 20px $light,
      inset -2px 0 20px rgba(128, 128, 128, 0.5);
    cursor: pointer;

    &:active {
      box-shadow: 5px 5px 5px rgba(50, 50, 50, 0.2), inset 10px 0 20px $light,
        inset -2px 0 20px rgba(128, 128, 128, 0.5);
    }
  }

  .counter {
    margin-top: 150px;
    font-size: 100px;
    text-align: center;
    font-weight: bold;
    color: white;
    text-shadow: 5px 5px 10px black;
  }
}

//$accent: hsl(46, 65%, 52%);
$accent: hsl(0, 100%, 40%);

.ia-curtain-container {
  position: absolute;
  z-index: 101;
  width: 100%;
  height: 100%;
  margin: auto;

  &:hover .curtain {
    transform-origin: -120% top;
    transform: scaleX(0);
  }

  .curtain {
    width: 100%;
    position: absolute;
    top: -10%;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
    transform-style: preserve-3d;
    animation-delay: 5s;
    transition: transform 10s ease;
    transform-origin: -120% top;

    .rnUnit {
      width: 10vw;
      height: 120vh;
      background: repeating-linear-gradient(
        to left,
        $accent 4vw,
        darken($accent, 20%) 8vw,
        lighten($accent, 20%) 10vw
      );

      background-size: 100% 100%;
      display: inline-block;
      transform-origin: 0 0%;
      transform: rotate(3deg);
      animation: rnUnit 10s ease infinite;
    }

    @keyframes rnUnit {
      50% {
        transform: rotate(-3deg);
      }
    }

    .rnUnit:nth-child(1) {
      animation-delay: -0.1s;
    }
    .rnUnit:nth-child(2) {
      animation-delay: -0.2s;
    }
    .rnUnit:nth-child(3) {
      animation-delay: -0.3s;
    }
    .rnUnit:nth-child(4) {
      animation-delay: -0.4s;
    }
    .rnUnit:nth-child(5) {
      animation-delay: -0.5s;
    }
    .rnUnit:nth-child(6) {
      animation-delay: -0.6s;
    }
    .rnUnit:nth-child(7) {
      animation-delay: -0.7s;
    }
    .rnUnit:nth-child(8) {
      animation-delay: -0.8s;
    }
    .rnUnit:nth-child(9) {
      animation-delay: -0.9s;
    }
    .rnUnit:nth-child(10) {
      animation-delay: -1s;
    }
  }
}

